default/objects/GFNI_Log__e/GFNI_Log__e.object-meta.xml
<CustomObject>
    <label>GFNI_Log</label>
    <pluralLabel>GFNI_Logs</pluralLabel>
</CustomObject>