default/objects/GFNI_Log__e/fields/IsFirst__c.field-meta.xml
<CustomField>
    <fullName>IsFirst__c</fullName>
    <label>IsFirst</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>