default/objects/GFNI_Log__e/fields/LogType__c.field-meta.xml
<CustomField>
    <fullName>LogType__c</fullName>
    <label>LogType</label>
    <length>12</length>
    <type>Text</type>
</CustomField>