default/objects/GFNI_Log__e/fields/LookupObjectId__c.field-meta.xml
<CustomField>
    <fullName>LookupObjectId__c</fullName>
    <label>LookupObjectId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>