default/objects/GFNI_Log__e/fields/RecordDateTime__c.field-meta.xml
<CustomField>
    <fullName>RecordDateTime__c</fullName>
    <label>RecordDateTime</label>
    <type>DateTime</type>
</CustomField>