default/objects/GFNI_Log__e/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <label>Request Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>